--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,16 @@
-name: opengrinding
+name: OpenGrinding
 version: '1.0-SNAPSHOT'
-main: nl.grapjeje.opengrinding.Opengrinding
+main: nl.grapjeje.opengrinding.OpenGrinding
 api-version: '1.21'
 authors: [ GrapJeje ]
 description: A grinding plugin for openMinetopia
 website: grapjeje.nl
+
+dependencies:
+  server:
+    OpenMinetopia:
+      load: BEFORE
+      required: true
 
 commands:
   opengrinding:
