Added region crud system

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,2 @@
-database:
-  enabled: true
-  type: "sqlite"
-  host: "localhost"
-  port: 3306
-  database: "opengrinding"
-  user: "root"
-  password: ""
+jobs:
+  mining: true
