--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>exp4j</artifactId>
             <version>0.4.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 </project>
