Added a sell option

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,5 @@ commands:
     description: Credit command
   grindingregion:
     description: Region command
+  sell:
+    description: Sell command
