Experimental !!!!!: Skull cannot be set on top of the playerhead

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,3 +19,5 @@ commands:
     description: Region command
   sell:
     description: Sell command
+  fixskull:
+    description: Fix a skull that is stuck on a head
