Made a start of fishing and added a loot table CRUD system

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,3 +23,5 @@ commands:
     description: Shop command
   fixskull:
     description: Fix a skull that is stuck on a head
+  fishloottable:
+    description: Crud command for fish loottables
