--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -25,3 +25,5 @@ commands:
     description: Fix a skull that is stuck on a head
   fishloottable:
     description: Crud command for fish loottables
+  grindtokens:
+    description: Grindtokens command
