--- a/src/main/resources/default/config.yml
+++ b/src/main/resources/default/config.yml
@@ -3,7 +3,8 @@ jobskullsonplayerhead: false
 currency:
   buy-in-tokens: false
   sell-in-tokens: true
-  daily-limit: true
-  amount:
-    cash: 10000.0
-    tokens: 30.0
+  daily-limit:
+    enabled: true
+    amount:
+      cash: 10000.0
+      tokens: 30.0
