Fixed some TODO's

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,3 +23,5 @@ commands:
     description: Crud command for fish loottables
   grindtokens:
     description: Grindtokens command
+  dailylimit:
+    description: Dailylimit command
