Added the Mailman main game loop

--- a/src/main/resources/default/jobs/mailman.yml
+++ b/src/main/resources/default/jobs/mailman.yml
@@ -1,4 +1,5 @@
 enabled: true
+npc-name: "<blue> Pieter Post"
 
 whitelist: # Op welke blokken je kunt klikken om je pakketje te bezorgen
   - OAK_DOOR
