--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,3 +27,5 @@ commands:
     description: Dailylimit command
   mailman:
     description: Mailman openmenu command
+  pakketjes:
+    description: See where you need to deliver
