--- a/src/main/resources/default/jobs/mailman.yml
+++ b/src/main/resources/default/jobs/mailman.yml
@@ -6,7 +6,7 @@ whitelist: # Op welke blokken je kunt klikken om je pakketje te bezorgen
   - OAK_TRAPDOOR
 
 packages:
-  0: # Player level
+  '0': # Player level
     wait-time: 30 # Wacht tijd tussen de diensten
     reward:
       cash: 100.0
@@ -14,7 +14,7 @@ packages:
     amount:
       min: 1
       max: 3
-  1:
+  '1':
     wait-time: 20
     reward:
       cash: 500.0
@@ -22,7 +22,7 @@ packages:
     amount:
       min: 3
       max: 5
-  2:
+  '2':
     wait-time: 10
     reward:
       cash: 1000.0
@@ -33,8 +33,8 @@ packages:
 
 level:
   max: 2
-  formula: (100 * level) + ((level / 5) * 50)
+  formula: "(75 * level * level) + (100 * level) + 50"
   overrides:
-    0: 0.0
-    1: 0.0
-    2: 0.0
+    '0': 1.0
+    '1': 0.0
+    '2': 0.0
