--- a/src/main/resources/default/jobs/mining.yml
+++ b/src/main/resources/default/jobs/mining.yml
@@ -1,11 +1,11 @@
-enabled: true   # Zet de job aan/uit
+enabled: true # Zet de job aan/uit
 
 economy:
   sell:
-    enabled: true   # Zet verkopen aan/uit
+    enabled: true # Zet verkopen aan/uit
     open-buy-shop: true # Bepaal of dat je wilt dat de buy-shop opent met de sell commando
   buy:
-    enabled: true   # Zet kopen aan/uit
+    enabled: true # Zet kopen aan/uit
 
 ores:
   coal:
@@ -80,10 +80,10 @@ pickaxes:
     unlock-level: 35
 
 level:
-  max: 40   # Max level dat spelers kunnen bereiken
-  formula: (100 * level) + ((level / 5) * 50)   # Baseline berekening voor XP per level
-  overrides:    # Specifieke overrides per level (indien aanwezig, overschrijft de formula)
-    0: 0.0
-    1: 0.0
-    2: 0.0
-    10: 5000.0   # voorbeeld: level 10 heeft exact 5000 xp nodig
+  max: 40 # Max level dat spelers kunnen bereiken
+  formula: "(75 * level * level) + (100 * level) + 50" # Baseline berekening voor XP per level
+  overrides: # Specifieke overrides per level (indien aanwezig, overschrijft de formula)
+    '0': 1
+    '1': 0
+    '2': 0
+    '10': 5000 # voorbeeld: level 10 heeft exact 5000 xp nodig
