Added the grapjeje-core dependency inside libs
READ THE LICENSE FIRST

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,9 @@
         <dependency>
             <groupId>nl.grapjeje</groupId>
             <artifactId>grapjeje-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/grapjeje-core-1.0.jar</systemPath>
         </dependency>
 
         <dependency>
