--- a/pom.xml
+++ b/pom.xml
@@ -96,12 +96,18 @@
             <scope>provided</scope>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>nl.grapjeje</groupId>-->
+<!--            <artifactId>grapjeje-core</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/libs/grapjeje-core-1.0.jar</systemPath>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>nl.grapjeje</groupId>
             <artifactId>grapjeje-core</artifactId>
             <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/grapjeje-core-1.0.jar</systemPath>
         </dependency>
 
         <dependency>
