--- a/pom.xml
+++ b/pom.xml
@@ -96,19 +96,19 @@
             <scope>provided</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>nl.grapjeje</groupId>-->
-<!--            <artifactId>grapjeje-core</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>${project.basedir}/libs/grapjeje-core-1.0.jar</systemPath>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>nl.grapjeje</groupId>
             <artifactId>grapjeje-core</artifactId>
             <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/grapjeje-core-1.0.jar</systemPath>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>nl.grapjeje</groupId>-->
+<!--            <artifactId>grapjeje-core</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>st.orm</groupId>
