--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <shadedArtifactAttached>false</shadedArtifactAttached>
+                            <finalName>${project.artifactId}-${project.version}</finalName>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
                     </execution>
@@ -107,8 +107,6 @@
             <groupId>nl.grapjeje</groupId>
             <artifactId>grapjeje-core</artifactId>
             <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/grapjeje-core-1.0.jar</systemPath>
         </dependency>
 
         <dependency>
